<rdar://problem/6020083> -webkit-gradient slows down scrolling when page has horizontal scrollbar https://bugs.webkit.org/show_bug.cgi?id=19650

Reviewed by Simon Fraser.

* platform/graphics/GeneratedImage.cpp:
(WebCore::GeneratedImage::drawPattern): Added call to adjustParametersForTiledDrawing(),
letting the generator substitute the parameters with visually-equivalent values that
are more efficient.
* platform/graphics/Generator.h:
(WebCore::Generator::adjustParametersForTiledDrawing): Added a base class implementation
that does nothing.
* platform/graphics/Gradient.cpp:
(WebCore::Gradient::adjustParametersForTiledDrawing): Added. If the gradient is a horizontal
or vertical linear gradient, changes to use a 1-pixel tall (or wide) tile.
* platform/graphics/Gradient.h:



Canonical link: https://commits.webkit.org/44722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53318 268f45cc-cd09-0410-ab3c-d52691b4dbfc